API support for setting seed and/or sampler
+ parameterize bucket name in env

--- a/environment.yaml
+++ b/environment.yaml
@@ -29,4 +29,5 @@ dependencies:
     - boto3
     - -e git+https://github.com/CompVis/taming-transformers.git@master#egg=taming-transformers
     - -e git+https://github.com/openai/CLIP.git@main#egg=clip
+    - -e git+https://github.com/lstein/k-diffusion.git@master#egg=k-diffusion
     - -e .
